link to soundcloud

--- a/podcasts/clips/anyone-could-read-this.mdwn
+++ b/podcasts/clips/anyone-could-read-this.mdwn
@@ -16,4 +16,4 @@ Dan: Not gonna post it. . . yeah, exactly.
 
 ---
 
-This transcription is an excerpt of Linux Outlaws 129 ( http://old.linuxoutlaws.com/podcast/129 ) starting at 01:11:46.5 and ending at 01:15:24.  Reactions and remixes are welcome, but please note that the original podcast was released under the Creative Commons BY-SA 3.0 license ( http://creativecommons.org/licenses/by-sa/3.0/ ). See also Dan's remarks about publishing this clip at https://plus.google.com/107770072576338242009/posts/EaycNBRDx6x
+This transcription is an excerpt of Linux Outlaws 129 ( http://old.linuxoutlaws.com/podcast/129 ) starting at 01:11:46.5 and ending at 01:15:24.  Reactions and remixes are welcome, but please note that the original podcast was released under the Creative Commons BY-SA 3.0 license ( http://creativecommons.org/licenses/by-sa/3.0/ ). See also [Dan's remarks about publishing this clip](https://plus.google.com/107770072576338242009/posts/EaycNBRDx6x): http://soundcloud.com/philipdurbin/anyone-could-read-this
