--- a/podcasts/clips/anyone-could-read-this.mdwn
+++ b/podcasts/clips/anyone-could-read-this.mdwn
@@ -1,3 +1,5 @@
+http://soundcloud.com/philipdurbin/anyone-could-read-this
+
 Fab: Basically, when I use the Internet, I assume that people see what I'm doing.  If I don't want them to see, which really, really rarely happens, I'll use Tor, but I know that I'm not a typical person because I've got a pretty thick skin; I don't care.  I surf porn.  So what?  Like if they would publish a newspaper article "Fab surfs these porn sites" I would be like, "So what?"  You know?  Other people do that too.  If you deny. . . if you're a guy and you're on the Internet and you deny you surf porn, I mean, come on, that's just hypocritical.  I don't believe that one second.  I think you have to control. . . in your head, you have to make up for yourself how much information you want to get out there, and you have to be aware that it gets out there.  That's the point.  I know that when I use Gmail, that Google can read all my email.  But I also know that I don't do anything important by. . . I would never send. . . let's say I'd have a conversation with my lawyer.  I would never do that over unencrypted email.  I'd probably not even do it over a cell phone if it would be really bad stuff.
 
 Dan: This is something I always say.  I think a lot of people don't realize when they're using things like microblogs or blogs or whatever it might be. . . or Facebook is a massive one, people writing things on walls on Facebook not realizing everyone can see that.  My kind of attitude whenever I'm using the Internet is, "Ok, anyone could read this."  Unless, as you said, you're using encryption, and you're using Tor, and all the rest of it.  I don't post anything that I wouldn't be happy for someone to say, "You said that," and bring it up because then I shouldn't have posted it.  If I didn't want people to know, I shouldn't have posted it.
@@ -16,4 +18,4 @@ Dan: Not gonna post it. . . yeah, exactly.
 
 ---
 
-This transcription is an excerpt of Linux Outlaws 129 ( http://old.linuxoutlaws.com/podcast/129 ) starting at 01:11:46.5 and ending at 01:15:24.  Reactions and remixes are welcome, but please note that the original podcast was released under the Creative Commons BY-SA 3.0 license ( http://creativecommons.org/licenses/by-sa/3.0/ ). See also [Dan's remarks about publishing this clip](https://plus.google.com/107770072576338242009/posts/EaycNBRDx6x): http://soundcloud.com/philipdurbin/anyone-could-read-this
+This transcription is an excerpt of Linux Outlaws 129 ( http://old.linuxoutlaws.com/podcast/129 ) starting at 01:11:46.5 and ending at 01:15:24.  Reactions and remixes are welcome, but please note that the original podcast was released under the Creative Commons BY-SA 3.0 license ( http://creativecommons.org/licenses/by-sa/3.0/ ). See also Dan's remarks about publishing this clip at https://plus.google.com/107770072576338242009/posts/EaycNBRDx6x
