--- a/java/glassfish.mdwn
+++ b/java/glassfish.mdwn
@@ -9,6 +9,10 @@
 
 See also: Subcommands for the asadmin Utility - Oracle GlassFish Server 3.1 Administration Guide - http://docs.oracle.com/cd/E18930_01/html/821-2416/gcode.html
 
+## To kill Glassfish
+
+    jps | grep ASMain | awk '{print $1}' | xargs kill -9
+
 ## Increasing the Glassfish logging level
 
     murphy:~ pdurbin$ cd /Applications/NetBeans/glassfish-3.1.2.2/glassfish
