--- a/java/glassfish.mdwn
+++ b/java/glassfish.mdwn
@@ -6,6 +6,7 @@
     asadmin list-applications
     asadmin undeploy hello1
     asadmin list-log-levels server
+    asadmin generate-jvm-report
 
 See also: Subcommands for the asadmin Utility - Oracle GlassFish Server 3.1 Administration Guide - http://docs.oracle.com/cd/E18930_01/html/821-2416/gcode.html
 
