--- a/search/faceted.mdwn
+++ b/search/faceted.mdwn
@@ -1,4 +1,10 @@
-http://labs.adsabs.harvard.edu/adsabs/search/ is a webapp (Flask) that uses faceted search (with Solr) and is open source: https://github.com/adsabs/adsabs/tree/master/adsabs
+[[!toc levels=3]]
+
+Open source applications with faceted search
+
+## Astrophysics Data System (ADS)
+
+http://labs.adsabs.harvard.edu/adsabs/search/ is a webapp (Flask) that uses faceted search (with Solr) and is open source: https://github.com/adsabs/adsabs
 
 - https://github.com/adsabs/adsabs/blob/master/adsabs/modules/search/views.py
 - https://github.com/adsabs/adsabs/blob/master/adsabs/modules/search/forms.py
@@ -7,7 +13,7 @@ http://labs.adsabs.harvard.edu/adsabs/search/ is a webapp (Flask) that uses face
 - https://github.com/adsabs/adsabs/blob/master/adsabs/modules/search/templates/search_results.html
 - https://github.com/adsabs/adsabs/blob/master/adsabs/modules/search/templates/facets_sublevel.html
 
-## Faceted search example
+### Faceted search example
 
 Search for "jupiter"
 
@@ -24,3 +30,24 @@ http://labs.adsabs.harvard.edu/adsabs/search/?q=jupiter&aut_f=0%2FClarke%2C+J&au
 Under Keywords, click "hydrogen"
 
 http://labs.adsabs.harvard.edu/adsabs/search/?q=jupiter&aut_f=0%2FClarke%2C+J&aut_f=0%2FGerard%2C+J&key_f=hydrogen
+
+## Evergreen ILS (Integrated Library System)
+
+http://evergreen-ils.org
+
+- https://github.com/evergreen-library-system/Evergreen/blob/tags/rel_2_2_7/Open-ILS/src/perlmods/lib/OpenILS/Application/Search/Biblio.pm
+- https://github.com/evergreen-library-system/Evergreen/blob/tags/rel_2_2_7/Open-ILS/src/templates/opac/parts/result/facets.tt2
+
+### Faceted search example
+
+Search for "pirates"
+
+http://newburyport.mvlc.org/eg/opac/results?query=pirates
+
+Under Topic Subject, click  "History"
+
+[http://newburyport.mvlc.org/eg/opac/results?query=pirates;facet=subject|topic[History]](http://newburyport.mvlc.org/eg/opac/results?query=pirates;facet=subject|topic[History])
+
+Under Geographic Subject, click "Caribbean Area"
+
+[http://newburyport.mvlc.org/eg/opac/results?query=pirates;facet=subject|topic[History];facet=subject|geographic[Caribbean%20Area]](http://newburyport.mvlc.org/eg/opac/results?query=pirates;facet=subject|topic[History];facet=subject|geographic[Caribbean%20Area])
