--- a/java/ee.mdwn
+++ b/java/ee.mdwn
@@ -1,3 +1,5 @@
+[[!map pages=java/ee/*]]
+
 http://docs.oracle.com/javaee/6/tutorial/doc/
 
 https://wikis.oracle.com/display/GlassFish/Java+EE+6+Annotation+Reference
